--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_13.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_13.jrxml
@@ -10,6 +10,7 @@
 	<style name="Topic" vTextAlign="Middle" vImageAlign="Middle" fontName="TH Sarabun New" fontSize="18" isBold="true"/>
 	<style name="TextDetail" hTextAlign="Left" vTextAlign="Bottom" vImageAlign="Middle" rotation="None" fontName="TH Sarabun New" fontSize="16" isBold="false"/>
 	<parameter name="logo" class="java.io.InputStream"/>
+	<parameter name="formTsNumber" class="java.lang.String"/>
 	<parameter name="docPlace" class="java.lang.String"/>
 	<parameter name="docDate" class="java.util.Date"/>
 	<parameter name="docTime" class="java.lang.String"/>
