--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_17P2.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_17P2.jrxml
@@ -5,6 +5,7 @@
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
 	<style name="Topic" vTextAlign="Middle" vImageAlign="Middle" fontName="TH Sarabun New" fontSize="18" isBold="true"/>
 	<style name="TextDetail" hTextAlign="Left" vTextAlign="Bottom" vImageAlign="Middle" rotation="None" fontName="TH Sarabun New" fontSize="14"/>
+	<parameter name="formTsNumber" class="java.lang.String"/>
 	<parameter name="paymentDest" class="java.lang.String"/>
 	<parameter name="paymentExciseTaxAmt" class="java.math.BigDecimal"/>
 	<parameter name="paymentDate" class="java.util.Date"/>
